package Domain;

public interface TipoAnfibio {
	public abstract Integer cantidadRuedas();
	public abstract Integer velocidad();

}
